css/main.css
@charset "utf-8";
@import url(../css/html5reset-1.6.1.css); /*reset css*/

.inner {
    display: block;
    width: 960px;
    margin: 0 auto;
}
.inner:after {
    content: "";
    clear: both;
    display: block;
}
.content_title {
    display: block;
    width: 960px;
    text-align: center;
    color: #2B2B2B;
    margin: 0 auto;
}
.content_title h1 {
    font-family: 'Poppins', sans-serif;
    font-size: 36px;
    line-height: 51px;
    font-weight: bold;
}
.content_title hr {
    width: 40px;
    height: 1px;
    margin: 24px auto 0;
    color: #333333;
}
.content_title p {
    font-size: 16px;
    line-height: 22px;
    font-family: "Myriad Pro", "myriad-pro", Tahoma, Verdana, sans-serif;
    font-weight: 400;
    font-style: normal;
    margin-top: 24px;
}

/* header */
#header {
    width: 100%;
    height: 64px;
    position: fixed;
    z-index: 900;
    margin-top: 40px;
}
#header .inner {
    display: block;
    width: 960px;
    height: auto;
    margin: 0 auto;
}
a#header_logo {
    display: block;
    text-decoration: none;
    font-size: 36px;
    line-height: 50px;
    font-family: "Myriad Pro", "myriad-pro", Tahoma, Verdana, sans-serif;
    font-weight: 400;
    font-style: normal;
    color: #FFFFFF;
    margin-top: 19px;
}
#global_nav {
    display: none;
}

/* top */
#top {
    width: 100%;
    height: 620px;
    background: url(../img/header.png);
    background-size: cover;
    position: relative;
    z-index: 1;
    color: #FFFFFF;
}
#top .inner {
    width: 100%;
    height: 620px;
    backdrop-filter: brightness(80%);
}
#top_logo {
    display: block;
    width: 258px;
    height: auto;
    position: absolute;
    top: 240px;
    left: calc((100% - 258px)*0.5);
}
#top_logo h1 {
    font-family: "Myriad Pro", "myriad-pro", Tahoma, Verdana, sans-serif;
    font-weight: 400;
    font-size: 120px;
    line-height: 120px;
}
#top_logo p {
    font-family: "Myriad Pro", "myriad-pro", Tahoma, Verdana, sans-serif;
    font-weight: 400;
    font-size: 16px;
    line-height: 17px;
    text-align: center;
}

/* concept */
#concept {
    display: block;
    width: 100%;
    background: #FFFFFF;
    position: relative;
}
#concept .inner {
    width: 100%;
    padding-top: 80px;
    padding-bottom: 553px;
}
#concept .concept_img {
    display: block;
    width: 960px;
    height: auto;
    position: absolute;
    top: 298px;
    left: calc((100% - 960px)*0.5);
    z-index: 2;
}
#concept .concept_under {
    display: block;
    width: 100%;
    height: 240px;
    background-color: #EDEDED;
    position: absolute;
    top: 560px;
    z-index: 1;
}
/* work */
#work {
    display: block;
    width: 100%;
    background: #FFFFFF;
}
#work .inner {
    padding-top: 80px;
    padding-bottom: 100px;
}
#work .work_contents {
    display: block;
    width: 100%;
    max-width: 960px;
    margin-top: 40px;
    letter-spacing: -1em; /* 文字間を詰める */
    white-space: nowrap; /* 自動で折り返ししない */
}
#work .work_content_l {
    display: inline-block;
    width: 50%;
    letter-spacing: normal; /* 文字間を元に戻す */
    white-space: normal; /* 自動で折り返し(元に戻す) */
    vertical-align: top; /* 高さ合わせ*/
    position: relative;
}
#work .work_content_r {
    display: inline-block;
    width: 50%;
    letter-spacing: normal; /* 文字間を元に戻す */
    white-space: normal; /* 自動で折り返し(元に戻す) */
    vertical-align: top; /* 高さ合わせ*/
}
#work .work_content {
    display: block;
    width: 420px;
}
#work .work_content_l .work_content {
    margin-bottom: 80px;
    float: left;
}
#work .work_content_r .work_content {
    margin-top: 120px;
    float: right;
}
#work .work_content_dis h1 {
    font-family: 'Poppins', sans-serif;
    font-weight: bold;
    font-size: 24px;
    line-height: 40px;
    color: #333333;
    margin-top: 16px;
}
#work .work_content_dis p {
    font-size: 16px;
    line-height: 28px;
    font-family: "Myriad Pro", "myriad-pro", Tahoma, Verdana, sans-serif;
    font-weight: 400;
    font-style: normal;
}
/* florist */
#florist {
    display: block;
    width: 100%;
    background: #FFFFFF;
    position: relative;
    z-index: -2;
    padding-top: 80px;
    padding-bottom: 40px;
}
#florist .inner {
    position: absolute;
    z-index: 0;
}
#florist .florist_contents {
    display: block;
    width: 960px;
    margin: 40px auto 0;
    letter-spacing: -1em; /* 文字間を詰める */
    white-space: nowrap; /* 自動で折り返ししない */
}
#florist .florist_content {
    display: inline-block;
    width: 300px;
    margin-right: 30px;
    letter-spacing: normal; /* 文字間を元に戻す */
    white-space: normal; /* 自動で折り返し(元に戻す) */
    vertical-align: top; /* 高さ合わせ*/
}
#florist .florist_top {
    display: block;
    width: 100%;
    height: 374px;
    background-color: #EDEDED;
    position: absolute;
    top: 0;
    z-index: -1;
}
/* shop info */
#shop_info {
    display: block;
    width: 100%;
    background: #FFFFFF;
}
#shop_info .inner{
    padding: 80px 0;
}
#shop_info .shop_info_contents {
    display: block;
    width: 960px;
    margin: 40px auto;
    color: #2B2B2B;
}
#shop_info .shop_info_contents::after {
    content: "";
    clear: both;
    display: block;
}
#shop_info .shop_info_contents img {
    display: block;
    width: 480px;
    float: left;
}
#shop_info .shop_info_contents dl {
    display: block;
    width: 432px;
    float: right;
    font-size: 16px;
    line-height: 22px;
}
#shop_info .shop_info_contents dl dt {
    float: left;
    width: 80px;
    margin-left: 40px;
}
#shop_info .shop_info_contents dl dd {
    width: 311px;
    margin-left: 120px;
    margin-bottom: 12px;
    border-left: 1px solid #A0A0A0;
    padding-left: 16px;
}
/* contact */
#contact {
    display: block;
    width: 100%;
    background: url(../img/contact_us.png);
    background-size: cover;
}
#contact .inner {
    width: 100%;
    padding-top: 80px;
    padding-bottom: 100px;
    background-color: rgba(255,255,255,0.5);
}
a#contact_btn {
    display: block;
    width: 360px;
    margin: 40px auto 0;
    text-decoration: none;
    background: #FFFFFF;
    color: #2B2B2B;
    font-size: 20px;
    line-height: 80px;
    text-align: center;
}
a#contact_btn span {
    display: inline-block;
    width: 30px;
    height: 20px;
    border-radius: 2px;
    border: solid 1px currentColor;
    position: relative;
    margin-right: 24px;
    vertical-align: text-top;
}
a#contact_btn span::before {
    content: "";
    position: absolute;
    left: 15px;
    top: -6px;
    width: 1px;
    height: 20px;
    background-color: currentColor;
    -webkit-transform-origin: bottom;
    transform-origin: bottom;
    -webkit-transform: rotate(-45deg);
    transform: rotate(-45deg);
}
a#contact_btn span::after {
    content: "";
    position: absolute;
    left: 14px;
    top: -6px;
    width: 1px;
    height: 20px;
    background-color: currentColor;
    -webkit-transform-origin: bottom;
    transform-origin: bottom;
    -webkit-transform: rotate(45deg);
    transform: rotate(45deg);
}
/* footer */
#footer {
    height: 40px;
    text-align: center;
}
#footer p {
    font-size: 16px;
    line-height: 22px;
    color: #2B2B2B;
    font-family: "Myriad Pro", "myriad-pro", Tahoma, Verdana, sans-serif;
    font-weight: 400;
    font-style: normal;
    margin-top: 12px;
}

